feat: update root files
- index.ts: add settings for router
- styles: update global css vatiables

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
-  color: #ffffff;
-  background-color: #242424;
+  color: #fff;
+  background-color: var(--dark-gray);
 }
 *,
 *:before,
