feat: add new types & styles for Button & ModalForm components
- extract logic to control Modal commit into useModal custom hook

--- a/src/pages/root/root.module.css
+++ b/src/pages/root/root.module.css
@@ -1,6 +1,10 @@
-.headerContent {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 20px;
+  padding: 1.25rem;
+}
+
+.main {
+  padding: 2rem;
 }
