--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -8,6 +8,10 @@
   cursor: pointer;
 }
 
+.button:hover {
+  box-shadow: 0 0 0.5rem;
+}
+
 .normal {
   font-size: 0.8;
 }
@@ -25,6 +29,10 @@
   font-size: 0.7rem;
 }
 
+.alert {
+  color: var(--alert);
+}
+
 .purple {
   color: var(--neon-purple);
 }
@@ -34,6 +42,7 @@
 }
 
 .disabled {
+  cursor: not-allowed;
   color: var(--inactive-gray);
   opacity: 0.4;
 }
