--- a/src/components/pagination/pagination.module.css
+++ b/src/components/pagination/pagination.module.css
@@ -1,10 +1,16 @@
 .pagination {
   display: flex;
-  justify-content: end;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 1rem;
 }
 
-.pageNumber {
+.content {
   font-size: 1.4rem;
   font-weight: 700;
   color: var(--neon-blue);
+}
+
+.indent {
+  padding-left: 1rem;
 }
