refactor: update app styles

--- a/src/pages/root/root.module.css
+++ b/src/pages/root/root.module.css
@@ -5,6 +5,20 @@
   padding: 1.25rem;
 }
 
+.title {
+  margin: 0;
+}
+
+.link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: var(--neon-blue);
+}
+
+.link:hover {
+  text-shadow: var(--neon-blue) 0 0 1rem;
+}
+
 .main {
   padding: 2rem;
 }
