--- a/src/pages/root/routingBar/routingBar.module.css
+++ b/src/pages/root/routingBar/routingBar.module.css
@@ -13,10 +13,10 @@
   box-shadow: 0 0 50px 15px;
 }
 
-.firstLink {
+.garage {
   color: var(--neon-blue);
 }
 
-.secondLink {
+.winners {
   color: var(--neon-purple);
 }
